--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,20 +11,7 @@
             "driver": "MySQL",
             "name": "Local instance MySQL80",
             "username": "root",
-            "database": "inventorymanage"
-        },
-        {
-            "mysqlOptions": {
-                "authProtocol": "default",
-                "enableSsl": "Disabled"
-            },
-            "previewLimit": 50,
-            "server": "localhost",
-            "port": 3306,
-            "driver": "MySQL",
-            "name": "Local instance MySQL80",
-            "database": "inventorymanage",
-            "username": "root"
+            "database": "inventory_manage"
         }
     ]
 }
